# Aruu

./: .gitignore  CLAUDE.md  Cargo.toml  EPILEPSY.md  HISTORY.md  OVERLAY_TEST_INSTRUCTIONS.md  README.md  TEST_COMPARISON.md
examples/: enhanced_visualizer.rs  enhanced_visualizer.rs.backup  shader_demo.rs  simple_multi_shader.rs
src/: lib.rs  main.rs  visualizer.rs
src/audio/: advanced_analyzer.rs  features.rs  fft.rs  mod.rs  processor.rs  rhythm.rs
src/control/: mapper.rs  mod.rs  palettes.rs  parameters.rs  safety.rs  smoothing.rs  user_interface.rs  warning.rs
src/rendering/: composer.rs  context.rs  enhanced_composer.rs  mod.rs  overlay_system.rs  performance.rs  shader_system.rs  shaders.rs
src/rendering/shaders/: classic.frag.wgsl  classic.vert.wgsl  fractal.frag.wgsl  kaleidoscope.frag.wgsl  overlay.vert.wgsl  overlay_control.frag.wgsl  overlay_debug.frag.wgsl  parametric_wave.frag.wgsl  particle.frag.wgsl  plasma.frag.wgsl  spectralizer.frag.wgsl  tunnel.frag.wgsl
