[package]
name = "aruu"
version = "0.1.0"
edition = "2021"
authors = ["JackDraak"]

[dependencies]
rodio = { version = "0.19", features = ["symphonia"] }
wgpu = "22.0"
rustfft = "6.0"
cpal = "0.15"
winit = "0.30"
bytemuck = { version = "1.0", features = ["derive"] }
pollster = "0.3"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
symphonia = { version = "0.5", features = ["aac", "isomp4"] }

[dev-dependencies]
approx = "0.5"
